fix: ajustes nos endpoints da api
